--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "set PORT=8080 && dotenv -e .env.dev react-app-rewired start",
+    "dev": "dotenv -e .env.dev react-app-rewired start",
     "build": "react-app-rewired build",
-    "build:prod": "dotenv -e .env.prd react-app-rewired build",
+    "build:prd": "dotenv -e .env.prd react-app-rewired build",
     "build:test": "dotenv -e .env.test react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
